# cmake_template

./: CMakeLists.txt  test.cpp
